tests/rosetta/out/Rust/associative-array-merging.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:42Z
fn main() {
    fn merge(base: std::collections::HashMap<&'static str, i32>, update: std::collections::HashMap<&'static str, i32>) -> std::collections::HashMap<&'static str, i32> {
        let mut result: std::collections::HashMap<&'static str, i32> = { let mut m = std::collections::BTreeMap::new(); m };
        for k in base.keys() {
            result.insert(k, base[&k]);
        }
        for k in update.keys() {
            result.insert(k, update[&k]);
        }
        return result;
    }
    fn main() -> () {
        let base: std::collections::HashMap<&'static str, i32> = { let mut m = std::collections::BTreeMap::new(); m.insert("name", "Rocket Skates"); m.insert("price", 12.75); m.insert("color", "yellow"); m };
        let update: std::collections::HashMap<&'static str, i32> = { let mut m = std::collections::BTreeMap::new(); m.insert("price", 15.25); m.insert("color", "red"); m.insert("year", 1974); m };
        let result = merge(base, update);
        println!("{:?}", result);
    }
    main();
}
